--- a/main.html
+++ b/main.html
@@ -2,77 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
-    <style>
-        body {
-            background-color: RGB(255,255,153); 
-            background-image: url('img/햄버거감튀.png'),url('img/콜라치킨.png'),url('img/햄버거감튀.png'),url('img/콜라치킨.png'),url('img/햄버거감튀.png'),url('img/콜라치킨.png'),url('img/햄버거감튀.png'),url('img/콜라치킨.png');
-            background-position: 0px 0px, 70px 100px, 0px 200px, 70px 300px, 0px 400px, 70px 500px, 0px 600px, 70px 800px;
-            background-repeat: repeat-x;
-            background-size: 300px;
-           
-        }
-
-        .title{
-            font-family:cooper
-        }
-
-        input{
-            vertical-align : middle;
-        }
-
-        /*input.button-add{
-            
-            background-color: transparent;
-            background-image:url('img/게임시작.png');
-            background-repeat: no-repeat;
-            background-position: 0px 0px;
-            border:none;
-            cursor:pointer;
-            height:16px;
-            padding-left:16px;
-            vertical-align: middle;
-        }
-        .btnAreabutton{
-            width:17px;
-            height: 16px;
-            border: 0;
-            padding:0;
-            overflow:hidden;
-            position:relative;
-        }
-        .btnArea span{
-         width:17px;
-         height: 16px;
-        position: absolute;
-        top:0px;
-        left:0px;
-        }
-
-        .prev span{ /*css의 id는 100점, class명은 10점, button 같은 type명은 1점
-        background: url('img/게임시작.png') no-repeat;
-        }
-
-        .next span{
-        background: url('img/게임시작.png') no-repeat; /*!important  무조건 최우선으로 적용되도록 하는 코드(테스트일때만 쓰도록)
-        }*/
-    </style>
-
-    <style>
-    @font-face {
-        font-family: 'cooper';
-        src: url('CooperFiveOpti.otf');
-    }
-    </style>
+    <link rel="stylesheet" href="main.css">
 
 </head>
 <body>
-    <div class = "container">
-        <div class = "hamburger"></div>
-        <div class = "coke"></div>
-    </div>
+    <!--<canvas id="canvas"></canvas>-->
     <div>
-        <h1 class="title", style = "font-size:4em; color: #41A541; text-align: center; text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000; position: absolute; left: 50%; top:25%; transform: translate(-50%,-50%)">HEALTH EAT RUN</h1>
-        <input type = "button" class = "button-add"/>
-
+        <h1 class="title">HEALTH EAT RUN</h1>
+        <!--<input type = "button" class = "button-add"/>-->
+        <button class="gameStart" type="button">GameStart</button>
+        <script src="main.js"></script>
 </body>
 </html>
