--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/HealthEatRun/style/main.css">
 
 </head>
 <body>
@@ -11,6 +11,6 @@
         <h1 class="title">HEALTH EAT RUN</h1>
         <!--<input type = "button" class = "button-add"/>-->
         <button class="gameStart" type="button">GameStart</button>
-        <script src="main.js"></script>
+        <script src="/HealthEatRun/js/main.js"></script>
 </body>
 </html>
