--- a/main.html
+++ b/main.html
@@ -8,9 +8,12 @@
 <body>
     <!--<canvas id="canvas"></canvas>-->
     <div>
+
         <h1 class="title">HEALTH EAT RUN</h1>
         <!--<input type = "button" class = "button-add"/>-->
-        <button class="gameStart" type="button">GameStart</button>
+        <img src="img/gamestart.png" style = "width:300px; height:100px; display:block; margin: 200px auto 20px auto; " >
+        <img src="img/readingglasses.png" style = "width:150px; height:100px; display:block; margin: auto 100px 20px auto; " >
+        <img src="img/market.png" style = "width:150px; height:100px; display:block; margin: auto 250px 20px auto; " >
         <script src="/HealthEatRun/js/main.js"></script>
 </body>
 </html>
