--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <!--<input type = "button" class = "button-add"/>-->
         <img src="img/gamestart.png" style = "width:300px; height:100px; display:block; margin: 200px auto 20px auto; " >
         <img src="img/readingglasses.png" style = "width:150px; height:100px; display:block; margin: auto 100px 20px auto; " >
-        <img src="img/market.png" style = "width:150px; height:100px; display:block; margin: auto 250px 20px auto; " >
+        <img src="img/market.png" style = "width:150px; height:100px; display:block; margin: auto 250px px auto; " >
         <script src="/HealthEatRun/js/main.js"></script>
 </body>
 </html>
