도움말 완성(디자인 수정 필요)

--- a/html/help.html
+++ b/html/help.html
@@ -2,10 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/help.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
     <title>도움말</title>
 </head>
 <body>
-    
+    <a href="main.html">
+        <img src="/img/home.png" id="goMain_btn" width="60px" height="60px">
+    </a>
+    <div id="disc">
+        건강해지기 위한 5계명
+        <p id="story">
+            첫번째 : 패스트 푸드는 닿아서도 안된다!<br><br>
+            두번째 : 패스트 푸드는 점프와 슬라이드로 피해라!<br><br>
+            세번째 : 몸에 좋은 음식을 먹어 강해져라!<br><br>
+            네번째 : 그 누구보다 kcal를 많이 소모해라!<br><br>
+            다섯번째 : 더욱 몸이 강해질 수 있도록 단련해라!<br><br>
+        </p>
+    </div>
+    <img src="/img/runningMan.png" id="runningMan"width="500px" height="350px">
+    <button type="button" id="next_btn" onclick="location.href='help2.html'">다음으로</button>
+    <div id="bottom"></div>
 </body>
 </html>
