help css 나누기 및 수정

--- a/html/help1.html
+++ b/html/help1.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style/help.css">
+    <link rel="stylesheet" href="/style/help_base.css">
+    <link rel="stylesheet" href="/style/help1.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
     <title>도움말</title>
 </head>
