--- a/html/main.html
+++ b/html/main.html
@@ -10,7 +10,7 @@
 
     <div id="menu_div">
         <button type="button" id="gameStart_btn" onclick="location.href='mainGame.html'">게임시작</button>
-        <button type="button" id="help_btn" onclick="location.href='help.html'">
+        <button type="button" id="help_btn" onclick="location.href='help1.html'">
             <img src="/img/help.png" id="helpPng" width="50px" height="50px">도움말</button>
         </div>
         <div id="rank_div">
