상점 배경 및 타이틀 삽입

--- a/html/store.html
+++ b/html/store.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상점</title>
+    <link rel="stylesheet" href="/style/store.css">
 </head>
 <body>
-    
+    <h1 id="title">STORE</h1>  
 </body>
 </html>
