상점 뒷배경 교체, 버튼 생성, 결제 페이지 생성, 도움말 뒷배경 추가, 수정

--- a/html/store.html
+++ b/html/store.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 id="title">STORE</h1>  
+    <button type="button" id="payment" onclick="location.href='gopayment.html'">00 Kcal 소모하기</button>
 </body>
 </html>
