--- a/html/store.html
+++ b/html/store.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="/style/store.css">
 </head>
 <body>
+    <a href="main.html">
+        <img src="/img/home.png" id="goMain_btn" width="60px" height="60px">
+    </a>
     <h1 id="title">STORE</h1>  
-    <button type="button" id="payment" onclick="location.href='gopayment.html'">00 Kcal 소모하기</button>
+    <div id="item_div">
+        <div id="item"></div>
+        <div id="item"></div>
+        <div id="item"></div>
+        <div id="item"></div>
+    </div>
+    <div id="item_div">
+        <div id="item"></div>
+        <div id="item"></div>
+        <div id="item"></div>
+        <div id="item"></div>
+    </div>
+        <button type="button" id="buy_btn">00 Kcal 소모하기</button>
+    </div>
+
+    
 </body>
 </html>
