도움말 및 메인 주석달기, 수정

--- a/html/help1.html
+++ b/html/help1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style/help_base.css">
+    <link rel="stylesheet" href="/style/back.css">
     <link rel="stylesheet" href="/style/help1.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
     <title>도움말</title>
@@ -22,7 +22,9 @@
         </p>
     </div>
     <img src="/img/runningMan.png" id="runningMan"width="500px" height="350px">
+    
     <button type="button" id="next_btn" onclick="location.href='help2.html'">다음으로</button>
+    
     <div id="bottom"></div>
 </body>
 </html>
