이미지 파일 정리

--- a/html/help1.html
+++ b/html/help1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a href="main.html">
-        <img src="/img/home.png" id="goMain_btn" width="60px" height="60px">
+        <img src="../img/home.png" id="goMain_btn" width="60px" height="60px">
     </a>
     <div id="disc">
         건강해지기 위한 5계명
@@ -21,7 +21,7 @@
             다섯번째 : 더욱 몸이 강해질 수 있도록 단련해라!<br><br>
         </p>
     </div>
-    <img src="/img/runningMan.png" id="runningMan"width="500px" height="350px">
+    <img src="img/help1img/runningMan.png" id="runningMan"width="500px" height="350px">
     
     <button type="button" id="next_btn" onclick="location.href='help2.html'">다음으로</button>
     
