--- a/html/store.html
+++ b/html/store.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="main.html">
-        <img src="/img/home.png" id="goMain_btn" width="60px" height="60px">
+        <img src="img/storeimg/home.png" id="goMain_btn" width="60px" height="60px">
     </a>
     <h1 id="title">STORE</h1>  
     <div id="item_div">
