--- a/html/main.html
+++ b/html/main.html
@@ -15,10 +15,10 @@
         </div>
         <div id="rank_div">
             <button type="button" id="rank_btn" onclick="location.href='rank.html'">
-                <img src="..img/..mainimg/rank.png" id="rankPng" width="50px" height="40px">랭킹</button>
+                <img src="img/mainimg/rank.png" id="rankPng" width="50px" height="40px">랭킹</button>
         </div>
 
         <a href="store.html" id="storePng">
-            <img src="..img/mainimg/store.png" width="200px" height="200px" >
+            <img src="img/mainimg/store.png" width="200px" height="200px" >
         </a>
 </html>
