이미지 경로 수정

--- a/html/help1.html
+++ b/html/help1.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style/back.css">
+    <link rel="stylesheet" href="/style/background.css">
     <link rel="stylesheet" href="/style/help1.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
     <title>도움말</title>
 </head>
 <body>
     <a href="main.html">
-        <img src="/img/home.png" id="goMain_btn" width="60px" height="60px">
+        <img src="/img/help/home.png" id="goMain_btn" width="60px" height="60px">
     </a>
     <div id="disc">
         건강해지기 위한 5계명
