--- a/html/help2.html
+++ b/html/help2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/back.css">
+    <link rel="stylesheet" href="/style/background.css">
     <link rel="stylesheet" href="/style/help2.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
     <title>도움말</title>
