--- a/html/main.html
+++ b/html/main.html
@@ -9,16 +9,9 @@
     <h1 id="title">HEALTH EAT RUN !</h1>  
 
     <div id="menu_div">
-        <button type="button" id="gameStart_btn" onclick="location.href='mainGame.html'">게임시작</button>
+        <button type="button" id="gameStart_btn" onclick="location.href='round1.html'">게임시작</button>
         <button type="button" id="help_btn" onclick="location.href='help1.html'">
-            <img src="help.png" id="helpPng" width="50px" height="50px">도움말</button>
+            <img src="/img/help/help.png" id="helpPng" width="50px" height="50px">도움말</button>
         </div>
-        <div id="rank_div">
-            <button type="button" id="rank_btn" onclick="location.href='rank.html'">
-                <img src="img/mainimg/rank.png" id="rankPng" width="50px" height="40px">랭킹</button>
-        </div>
-
-        <a href="store.html" id="storePng">
-            <img src="img/mainimg/store.png" width="200px" height="200px" >
-        </a>
+    
 </html>
