--- a/html/main.html
+++ b/html/main.html
@@ -3,15 +3,12 @@
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
     <link rel="stylesheet" href="/style/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 id="title">HEALTH EAT RUN !</h1>  
-
-    <div id="menu_div">
-        <button type="button" id="gameStart_btn" onclick="location.href='round1.html'">게임시작</button>
-        <button type="button" id="help_btn" onclick="location.href='help1.html'">
-            <img src="/img/help/help.png" id="helpPng" width="50px" height="50px">도움말</button>
-        </div>
-    
+    <button type="button" id="gameStart_btn" onclick="location.href='round1.html'">게임시작</button>  
+    <a href="help1.html">
+        <img src="/img/help/help.png" id="helpPng" width="50px" height="50px">
+    </a>
 </html>
