--- a/html/main.html
+++ b/html/main.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
     <link rel="stylesheet" href="/style/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 id="title">HEALTH EAT RUN !</h1>  
