--- a/html/help1.html
+++ b/html/help1.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style/background.css">
     <link rel="stylesheet" href="/style/help1.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Yeon+Sung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&family=Luckiest+Guy&display=swap" rel="stylesheet">
     <title>도움말</title>
 </head>
 <body>
     <a href="main.html">
-        <img src="/img/help/home.png" id="goMain_btn" width="60px" height="60px">
+        <img src="/img/help/home.png" id="goMain_btn" width="70px" height="70px">
     </a>
     <div id="disc">
         건강해지기 위한 5계명
         <p id="story">
-            첫번째 : 패스트 푸드는 닿아서도 안된다!<br><br>
-            두번째 : 패스트 푸드는 점프와 슬라이드로 피해라!<br><br>
-            세번째 : 몸에 좋은 음식을 먹어 강해져라!<br><br>
-            네번째 : 그 누구보다 kcal를 많이 소모해라!<br><br>
-            다섯번째 : 더욱 몸이 강해질 수 있도록 단련해라!<br><br>
+            첫번째 : 몸에 안 좋은 음식은 피하자!<br><br>
+            두번째 : 몸에 좋은 음식은 찾아서라도 먹자!<br><br>
+            세번째 : 몸을 단련시키기 위해 무엇이든 하자!<br><br>
+            네번째 : 좋은 음식을 먹고 운동하면 누구나 건강해진다!<br><br>
+            다섯번째 : 포기하지 말고 열심히 하자!<br><br>
         </p>
     </div>
     <img src="/img/runningMan.png" id="runningMan"width="500px" height="350px">
