round1 js , round1 css

--- a/html/round1.html
+++ b/html/round1.html
@@ -3,7 +3,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style/round1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>! 짝 맞추기 !</title>
+    <title>round1 - ! 짝 맞추기 !</title>
+
+   <!-- 외부 js스크립트 호출-->
+    <script src= "round1.js"></script> 
+    
 </head>
 <body>
     
