--- a/html/main.html
+++ b/html/main.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="../style/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 id="title">HEALTH EAT RUN !</h1>  
     <button type="button" id="gameStart_btn" onclick="location.href='round1.html'">게임시작</button>  
     <a href="help1.html">
-        <img src="/img/help/help.png" id="helpPng" width="50px" height="50px">
+        <img src="../img/help/help.png" id="helpPng" width="50px" height="50px">
     </a>
 </html>
