절대 경로 수정

--- a/html/round1.html
+++ b/html/round1.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Round 1</title>
-    <link rel="stylesheet" href="/style/background.css">
+    <link rel="stylesheet" href="../style/background.css">
    
 </head>
 <body>
     <div id="bottom"></div>
     
     <canvas id="canvas"></canvas>
-    <script src="/js/round1.js"></script>
+    <script src="../js/round1.js"></script>
 </html>
