2라운드 기본 로직 및 판 만들기

--- a/html/round2.html
+++ b/html/round2.html
@@ -2,28 +2,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Round 2</title>
-    <link rel="stylesheet" href="/style/background.css">
-   
+    <link rel="stylesheet" href="../style/background.css">
+    <link rel="stylesheet" href="../style/round2.css">
 </head>
 <body>
-    <div id="bottom"></div>
-    <div class="card" id="salad"></div>
-    <div class="card" id="salad"></div>
-    <div class="card" id="steak"></div>
-    <div class="card" id="steak"></div>
-    <div class="card" id="shake"></div>
-    <div class="card" id="shake"></div>
-    <div class="card" id="brownRice"></div>
-    <div class="card" id="brownRice"></div>
-    <div class="card" id="sweatPumkin"></div>
-    <div class="card" id="sweatPumkin"></div>
-    <div class="card" id="chickenBreast"></div>
-    <div class="card" id="chickenBreast"></div>
-    <div class="card" id="tofu"></div>
-    <div class="card" id="tofu"></div>
-    <div class="card" id="milk"></div>
-    <div class="card" id="milk"></div>
 
-    <canvas id="canvas"></canvas>
+    <div id="card_div">
+
+            <div class="card" id="salad1"></div>
+            <div class="card" id="salad2"></div>
+            <div class="card" id="steak1"></div>
+            <div class="card" id="steak2"></div>
+
+
+            <div class="card" id="shake1"></div>
+            <div class="card" id="shake2"></div>
+            <div class="card" id="brownRice1"></div>
+            <div class="card" id="brownRice2"></div>
+
+
+            <div class="card" id="chickenBreast1"></div>
+            <div class="card" id="chickenBreast2"></div>
+
+            <div class="card" id="tofu1"></div>
+            <div class="card" id="tofu2"></div>
+            <div class="card" id="milk1"></div>
+            <div class="card" id="milk2"></div>
+
+    </div>
+   
+
+    <div id="bottom"></div>
+
     <script src="/js/round2.js"></script>
 </html>
