도움말 내용 수정

--- a/html/help1.html
+++ b/html/help1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../style/background.css">
     <link rel="stylesheet" href="../style/help1.css">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <title>도움말</title>
+    <title>~ 도움말 ~</title>
 </head>
 <body>
     <a href="main.html">
