캔버스 생성 및 캐릭터 생성

--- a/html/round1.html
+++ b/html/round1.html
@@ -2,12 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <title>!헬스장에서의 유혹을 피하라!</title>
-    <link rel="stylesheet" href="../style/background.css">
+    <!--<link rel="stylesheet" href="../style/background.css">-->
     <link rel="stylesheet" href="../style/round1.css">
 </head>
 <body>
-    <div id="bottom"></div>
-    
-    <canvas id="canvas"></canvas>
+    <!--<div id="bottom"></div>-->
+    <canvas id="canvas"></canvas> <!--canvas 태그-->
     <script src="../js/round1.js"></script>
 </html>
