이미지 넣기 및 로직 생성

--- a/html/round2.html
+++ b/html/round2.html
@@ -8,31 +8,24 @@
 <body>
 
     <div id="card_div">
-
-            <div class="card" id="salad1"></div>
-            <div class="card" id="salad2"></div>
-            <div class="card" id="steak1"></div>
-            <div class="card" id="steak2"></div>
-
-
-            <div class="card" id="shake1"></div>
-            <div class="card" id="shake2"></div>
-            <div class="card" id="brownRice1"></div>
-            <div class="card" id="brownRice2"></div>
-
-
-            <div class="card" id="chickenBreast1"></div>
-            <div class="card" id="chickenBreast2"></div>
-
-            <div class="card" id="tofu1"></div>
-            <div class="card" id="tofu2"></div>
-            <div class="card" id="milk1"></div>
-            <div class="card" id="milk2"></div>
-
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="sendId(this.id)"></div>
     </div>
    
 
     <div id="bottom"></div>
 
-    <script src="/js/round2.js"></script>
+    <script src="../js/round2.js"></script>
 </html>
