끝난 후 다음으로 버튼 생성

--- a/html/round2.html
+++ b/html/round2.html
@@ -6,22 +6,21 @@
     <link rel="stylesheet" href="../style/round2.css">
 </head>
 <body>
-
     <div id="card_div">
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
-            <div class="card"  onclick="sendId(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
+            <div class="card"  onclick="clickCard(this.id)"></div>
     </div>
    
 
