div js로 생성 - onclick 안됨

--- a/html/round2.html
+++ b/html/round2.html
@@ -7,20 +7,20 @@
 </head>
 <body>
     <div id="card_div">
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
-            <div class="card"  onclick="clickCard(this.id)"></div>
+           <!-- <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>-->
     </div>
    
 
