기본 인덱스

--- a/html/round3.html
+++ b/html/round3.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <title>Round 3</title>
     <link rel="stylesheet" href="../style/background.css">
-    <link rel="stylesheet" href="../style/round2.css">
+    <link rel="stylesheet" href="../style/round3.css">
 </head>
 <body>
     <div id="bottom"></div>
-
+    <canvas id="canvas"></canvas>
     <script src="../js/round3.js"></script>
 </body>
