round2 게임 종료 시 화면 완성

--- a/html/round2.html
+++ b/html/round2.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Round 2</title>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/background.css">
     <link rel="stylesheet" href="../style/round2.css">
 </head>
 <body>
     <div id="card_div">
-           <!-- <div class = "card"  onclick = "clickCard(this.id)"></div>
             <div class = "card"  onclick = "clickCard(this.id)"></div>
             <div class = "card"  onclick = "clickCard(this.id)"></div>
             <div class = "card"  onclick = "clickCard(this.id)"></div>
@@ -20,10 +20,9 @@
             <div class = "card"  onclick = "clickCard(this.id)"></div>
             <div class = "card"  onclick = "clickCard(this.id)"></div>
             <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>-->
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
+            <div class = "card"  onclick = "clickCard(this.id)"></div>
     </div>
-   
-
     <div id="bottom"></div>
 
     <script src="../js/round2.js"></script>
