뒷배경 애니메이션

--- a/html/round1.html
+++ b/html/round1.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <!--<div id="bottom"></div>-->
-    <canvas id="canvas" width="5000" height="5000" style="border: 1px solid #000;">
-        fail 
-    </canvas> <!--canvas 태그-->
-    
-    <script src="../js/round1.js"></script>
+     <!--canvas 태그-->
+    <canvas id="canvas"></canvas>
+        <div class = "moving"></div>
+        
+   
+   
+   <script src="../js/round1.js"></script>
    
 </html>
