js 충돌체크 히트박스 수정

--- a/html/round1.html
+++ b/html/round1.html
@@ -10,7 +10,7 @@
     <!--<div id="bottom"></div>-->
      <!--canvas 태그-->
     <canvas id="canvas"></canvas>
-        <div class = "moving"></div>
+        <div class = "backmoving"></div>
         
    
    
