--- a/html/round3.html
+++ b/html/round3.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Round 3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../style/background.css">
     <link rel="stylesheet" href="../style/round3.css">
 </head>
 <body>
-
-    <canvas id="canvas"></canvas>
     <script src="../js/round3.js"></script>
 </body>
