달리기 모션을 위한 이미지 추가

--- a/html/round1.html
+++ b/html/round1.html
@@ -11,8 +11,12 @@
      <!--canvas 태그-->
     <canvas id="canvas"></canvas>
         <div class = "backmoving"></div>
-        
-
+        <div id = "myProgress">
+            <div id = "myBar"></div>
+        </div>
+        <div id="digit"></div>
+        <br><br>
+        <button onclick="start()">게임 시작! </button>
    <script src="../js/round1.js"></script>
    
 </html>
