--- a/html/round1.html
+++ b/html/round1.html
@@ -13,4 +13,12 @@
         <div class = "backmoving"></div>
    <script src="../js/round1.js"></script>
    
-</html>
+   <!--<button id = "S" type = "button" class = "btn-primary mt-5 S">시작</button>
+   <br>
+   <a>HP</a>
+   <button id = "A" type = "button" class= " mt-5 S1" src = "../img/round1/heart.png"></button> 
+   <button id = "B" type = "button" class= "mt-5 S2" src = "../img/round1/heart.png"></button> 
+   <button id = "C" type = "button" class= "mt-5 S3" src = "../img/round1/heart.png"></button>-->
+   
+   
+  </html>
