round2 삭제 및 round3 파일들 이름 변경->round2

--- a/html/round2.html
+++ b/html/round2.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Round 2</title>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <title>Round 3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Viga&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/background.css">
     <link rel="stylesheet" href="../style/round2.css">
 </head>
 <body>
-    <div id="card_div">
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-            <div class = "card"  onclick = "clickCard(this.id)"></div>
-    </div>
-    <div id="bottom"></div>
 
     <script src="../js/round2.js"></script>
-</html>
+</body>
