--- a/html/round1.html
+++ b/html/round1.html
@@ -12,7 +12,7 @@
      <!--canvas 태그-->
     <canvas id="canvas"></canvas>
         <div class = "backmoving"></div>
-   <script src="../js/Test2.js"></script>
+   <script src="../js/round1.js"></script>
    
    <!--<button id = "S" type = "button" class = "btn-primary mt-5 S">시작</button>
    <br>
