--- a/html/round1.html
+++ b/html/round1.html
@@ -4,15 +4,17 @@
     <title>!헬스장에서의 유혹을 피하라!</title>
     <!--<link rel="stylesheet" href="../style/background.css">-->
     <link rel="stylesheet" href="../style/round1.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="#">
+   <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="#"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Viga&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--<div id="bottom"></div>-->
      <!--canvas 태그-->
     <canvas id="canvas"></canvas>
         <div class = "backmoving"></div>
-   <script src="../js/Test2.js"></script>
+   <script src="../js/round1.js"></script>
    
    <!--<button id = "S" type = "button" class = "btn-primary mt-5 S">시작</button>
    <br>
