--- a/html/main.html
+++ b/html/main.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
     <link rel="stylesheet" href="../style/main.css">
+     <link rel="icon" type="image/png" href="http://example.com/myicon.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 <body>
