--- a/html/help2.html
+++ b/html/help2.html
@@ -16,8 +16,8 @@
         챕터는 총 3가지이며 각각 헬스장, 마트, 길거리를 테마로 진행됩니다.<br><br>
 
         1라운드 : 헬스장에서의 유혹을 뿌리쳐라!<br> 
-        스페이스키나  ↑ 방향키를 통해 점프하고, <br>
-        ↓ 방향키를 통해 슬라이드할 수 있습니다.<br><br>
+        스페이스키나  ↑ 방향키를 통해 점프하여 음식을 피할 수 있습니다. <br>
+       <br><br>
         
         2라운드 : 길거리를 지나가며 보이는 음식을 피해라! <br>
         ← 방향키나 → 방향키를 통해<br>
