--- a/html/main.html
+++ b/html/main.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HEALTH EAT RUN</title>
-    <link rel="stylesheet" href="../html/main.css">
+    <link rel="stylesheet" href="../css/main.css">
      <link rel="icon" type="image/png" href="http://example.com/myicon.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Luckiest+Guy&display=swap" rel="stylesheet">
